--- a/app/blocks/form-box/form-box.pug
+++ b/app/blocks/form-box/form-box.pug
@@ -23,3 +23,10 @@ mixin form-box-removable(label, tag, nopoint)
       +e.point
     +e.BUTTON.delete.js-delete-object-except-last(type="button")
       +icon('cross').__icon._cross
+
+mixin nd-form-box(label, icon, tag, symbol, symbol2, symbol3)
+  - var addClass = (symbol || symbol2 || symbol3) ? '_icon' : '';
+  +b(tag || 'label').form-box__&attributes(attributes).nd-form-box(class=addClass)
+    block
+    if label
+      +e.label!= label
