--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -199,14 +199,15 @@ $nd-color-daypass: #006cea;
 $nd-color-gray-text4: #525a65;
 $nd-color-gray-text5: #787878;
 $nd-color-border-light: #afb4b5;
-$nd-color-gray-text6: #86919e;
+$nd-color-gray-text6: $nd-color-gray-text;
 $nd-color-gray-text7: #c1c1c1;
-$nd-color-input-border: $nd-color-gray-text6;
+$nd-color-input-border: $nd-color-gray-text;
 $nd-color-input-focus-border: $nd-color-basic;
 $nd-color-input-error-border: #cc3838;
 $nd-color-border: #eaeaea;
 $nd-color-border2: #a3acba;
 $nd-color-border3: #d4dfe2;
+$nd-color-input-placeholder: #e4e4e4;
 
 // ##########
 // Transitions
