--- a/app/components/search-panel/search-panel.pug
+++ b/app/components/search-panel/search-panel.pug
@@ -38,7 +38,8 @@ mixin search-panel()
       +e.FORM.block.hide(data-step="location")
         +e.locations
           +nd-form-box('Location')._bg-white
-            +nd-input().js-autofill(type="text" name="location" placeholder="location" data-autofill-source="assets/data/locations-autofill.json")
+            +nd-input().js-autocomplete(type="text" name="location" placeholder="location" data-autocomplete-url="assets/data/locations-autocomplete.json" autocomplete="off")
+            +autocomplete-list
         +nd-button('button', true).__button(type="submit") Show
         +e.note Search by area, tube station or the name of the space to find your match.
     block
