--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -207,7 +207,7 @@ $nd-color-input-error-border: #cc3838;
 $nd-color-border: #eaeaea;
 $nd-color-border2: #a3acba;
 $nd-color-border3: #d4dfe2;
-$nd-color-input-placeholder: #e4e4e4;
+$nd-color-input-placeholder: #4e4e4e;
 
 // ##########
 // Transitions
