--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -122,7 +122,7 @@
           background .15s ease,
           border .15s ease;
 
-        @include screen('md', max, 2) {
+        @include screen('lg', max, 2) {
           height: pxtovw(60, 1366);
         }
 
@@ -213,6 +213,10 @@
       justify-content: flex-start;
       align-items: center;
       color: $nd-color-logo;
+
+      @include screen('lg', max, 2) {
+        margin-right: pxtovw(50, 1366);
+      }
 
       @include screen('md', max, 2) {
         margin-right: pxtovw(50, 960);
