--- a/app/components/search-panel/search-panel.scss
+++ b/app/components/search-panel/search-panel.scss
@@ -387,6 +387,7 @@
     letter-spacing: -.02em;
     stroke: $nd-color-logo;
     margin-top: -4px;
+    margin-bottom: -3px;
 
     @include screen('xl', max, 2) {
       margin-bottom: -3px;
