--- a/app/components/main-lead/main-lead.pug
+++ b/app/components/main-lead/main-lead.pug
@@ -1,9 +1,9 @@
 mixin main-lead()
   +b.SECTION.main-lead&attributes(attributes)
     .nd-container
-      +e.H1.heading The place where you <br> can find your perfect <br><i>workspace.</i>
-      +e.media
+      +e.H1.heading.js-sr_bottom-slow The place where you <br> can find your perfect <br><i>workspace.</i>
+      +e.media.js-sr_opacity
         +e.image
           IMG(src="assets/images/nd/lead-image.jpg")
-      +search-panel.__search
+      +search-panel.__search.js-sr_opacity
       block
