--- a/app/components/search-panel/search-panel.pug
+++ b/app/components/search-panel/search-panel.pug
@@ -7,7 +7,7 @@ mixin search-panel()
           +icon('nd-angle')
         +e.back-text Back
     +e.content
-      +e.block(data-step="default")
+      +e.block_base(data-step="default")
         +e.types
           +e.BUTTON.toggle.js-stp-form-next(type="button" data-next-step="teams")
             +e.toggle-icon_team
