--- a/app/components/promo/promo.pug
+++ b/app/components/promo/promo.pug
@@ -2,7 +2,7 @@ mixin promo(img)
   +b.SECTION.promo&attributes(attributes)
     .nd-container
       +e.wrapper
-        +e.bg
+        +e.bg.js-sr_opacity
           +e.IMG.bg-image(src=img)
         +e.content
           block
