fix animations for main page

--- a/app/layouts/redesign-default.pug
+++ b/app/layouts/redesign-default.pug
@@ -6,7 +6,7 @@ html(lang='en')
   include head-redesign
   block bodyClasses
   - var bodyClass = bodyCls || ''
-  body(class='no-js-scale ' + bodyClass)
+  body(class='no-js-scale nd ' + bodyClass)
     block header
     - var addClass = headerClass || ''
     - var pageCls = pageClass || ''
