--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -13,7 +13,7 @@ block content
   +nd-section
     .nd-container
       +nd-section-header
-        +nd-section-title.js-sr_bottom-slow Our favourite Spaces
+        +nd-section-title Our favourite Spaces
     +nd-slider(true, false).__slider.js-nd-slider.js-sr_opacity
       each item in getData('nd-spaces.json')
         +nd-space('a').__slide_space.swiper-slide(href="#")
@@ -45,7 +45,7 @@ block content
   +nd-section
     .nd-container
       +nd-section-header
-        +nd-section-title.js-sr_bottom-slow New on spacepool
+        +nd-section-title New on spacepool
     +nd-slider(true, false).__slider.js-nd-slider.js-sr_opacity
       each item in getData('nd-spaces.json')
         +nd-space('a').__slide_space.swiper-slide(href="#")
@@ -68,7 +68,7 @@ block content
   +nd-section._dpo
     .nd-container
       +nd-section-header
-        +nd-section-title.js-sr_bottom-slow Day pass offers
+        +nd-section-title Day pass offers
       +text-block._grid._grid_dpo.__content
         +text-block-image('assets/images/nd/section-image-1.jpg')._contain.js-sr_opacity
         +e.H4.title.js-sr_bottom-slow Like working from different locations, or don’t want to commit to a contract?
@@ -103,12 +103,12 @@ block content
   +nd-section.nd-hide-sm
     .nd-container
       +nd-section-header
-        +nd-section-title.js-sr_bottom-slow Locations
+        +nd-section-title Locations
     +tags-map
   +nd-section
     .nd-container
       +nd-section-header
-        +nd-section-title.js-sr_bottom-slow Blog
+        +nd-section-title Blog
     +nd-slider(false, false).__slider_news.js-nd-blog-slider
       each item in getData('nd-news.json')
         +nd-news(item).__slide_news.swiper-slide(href="#")
