space page part1

--- a/app/blocks/box/box.scss
+++ b/app/blocks/box/box.scss
@@ -169,4 +169,24 @@
   &_dark-blue {
     background-color: $nd-color-daypass;
   }
+
+  &_size10 {
+    width: 10px;
+    height: 10px;
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(10, 1366);
+      height: pxtovw(10, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(10, 960);
+      height: pxtovw(10, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(10, 375);
+      height: pxtovw(10, 375);
+    }
+  }
 }
