--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -92,6 +92,62 @@
         height: pxtovw(9, 375);
       }
     }
+
+    &_arrow5 {
+      width: 13px;
+      height: 7px;
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(13, 1366);
+        height: pxtovw(7, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(13, 960);
+        height: pxtovw(7, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(13, 375);
+        height: pxtovw(7, 375);
+      }
+    }
+
+    #{$b}_back & {
+      width: 13px;
+      height: 7px;
+
+      @include screen('lg', max, 2) {
+        width: pxtovw(13, 1366);
+        height: pxtovw(7, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        width: pxtovw(13, 960);
+        height: pxtovw(7, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(21, 375);
+        height: pxtovw(11, 375);
+      }
+
+      &:not(:last-child) {
+        margin-right: 32px;
+
+        @include screen('lg', max, 2) {
+          margin-right: pxtovw(32, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-right: pxtovw(32, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-right: pxtovw(32, 375);
+        }
+      }
+    }
   }
 
   &_underline:hover {
