--- a/app/blocks/transport-type/transport-type.pug
+++ b/app/blocks/transport-type/transport-type.pug
@@ -3,3 +3,7 @@ mixin transport-type(name)
     +e.name!=name
     +e.type
       block
+
+mixin transport-type-origin()
+  +b.transport-type&attributes(attributes)
+    block
