--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -394,6 +394,14 @@
     }
   }
 
+  &.nd-header_border {
+    border-bottom: 1px solid $nd-color-border4;
+
+    @include screen('xl', max, 2) {
+      border-bottom: none;
+    }
+  }
+
   &_special {
     #{$b} {
       &__logo {
