--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -2,6 +2,7 @@ include ../blocks/accordion/accordion
 include ../blocks/add-button/add-button
 include ../blocks/address-line/address-line
 include ../blocks/address-list/address-list
+include ../blocks/address/address
 include ../blocks/all-saved/all-saved
 include ../blocks/article/article
 include ../blocks/autocomplete-list/autocomplete-list
@@ -36,6 +37,7 @@ include ../blocks/divider/divider
 include ../blocks/dots/dots
 include ../blocks/dropdown/dropdown
 include ../blocks/error/error
+include ../blocks/facility-list/facility-list
 include ../blocks/facility/facility
 include ../blocks/factor/factor
 include ../blocks/feature/feature
@@ -55,6 +57,7 @@ include ../blocks/form-elements/nd-form-elements
 include ../blocks/form-panel/form-panel
 include ../blocks/form-toggle/form-toggle
 include ../blocks/form/form
+include ../blocks/gallery/gallery
 include ../blocks/gradients/gradients
 include ../blocks/gradients/gradients-redesign
 include ../blocks/grid/grid
@@ -123,6 +126,7 @@ include ../blocks/request-info/request-info
 include ../blocks/request-status/request-status
 include ../blocks/request-type/request-type
 include ../blocks/request/request
+include ../blocks/routes/routes
 include ../blocks/scroll-form/scroll-form
 include ../blocks/scroll-form/scroll-form-v2
 include ../blocks/section/nd-section
@@ -180,6 +184,7 @@ include ../components/cancelation-form/cancelation-form
 include ../components/compact-filter/compact-filter
 include ../components/condition-search/condition-search
 include ../components/content/content
+include ../components/content/nd-content
 include ../components/conversation/conversation
 include ../components/document/document
 include ../components/facilities/facilities
@@ -195,6 +200,7 @@ include ../components/main-lead/main-lead
 include ../components/main-menu/main-menu
 include ../components/offer-panel/offer-panel
 include ../components/offer-short/offer-short
+include ../components/page-header/nd-page-header
 include ../components/page-header/page-header
 include ../components/payment-summary/payment-summary
 include ../components/pivot-table/pivot-table
