--- a/app/pages/index/index.pug
+++ b/app/pages/index/index.pug
@@ -123,3 +123,5 @@ block content
             +nd-link._underline.__link_bold(href="#") Read more about being spacepool Host
           +e.buttons.js-sr_bottom-slow
             +nd-button.__button(href="#") Become a Host
+
+block panels
