--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -18,3 +18,4 @@ block content
         +e.list
           +nd-link(href="nd-ui-kit.html") Spacepool - Новый ui-kit (nd-ui-kit.html)
           +nd-link(href="index.html") Spacepool - Главная (index.html)
+          +nd-link(href="space-v3.html") Spacepool - Space (space-v3.html)
