--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -27,6 +27,25 @@
       height: 100%;
     }
   }
+
+  &_space {
+    display: block;
+    width: 100%;
+    height: 328px;
+    background-color: $nd-color-basic-light;
+
+    @include screen('lg', max, 2) {
+      height: pxtovw(328, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      height: pxtovw(328, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      height: pxtovw(258, 375);
+    }
+  }
 }
 
 .map-icon {
