--- a/app/blocks/transport-table/transport-table.pug
+++ b/app/blocks/transport-table/transport-table.pug
@@ -37,3 +37,56 @@ mixin transport-table()
               +icon('airplane').__icon_airplane
         +e.TD.cell_content
           +travel-time('44 - 80 min', 'car', '_car')
+
+
+mixin nd-transport-table()
+  +b.TABLE.transport-table__&attributes(attributes)
+    tbody
+      +e.TR.row
+        +e.TD.cell_head
+          +transport-type-origin()
+            +e.icons
+              +e.IMG.icon_subway(src="assets/images/nd/nd-subway.svg")
+            +e.name Liverpool Street
+        +e.TD.cell_content
+          +travel-time('10 min', 'man', '_man')._bold
+      +e.TR.row
+        +e.TD.cell_head
+          +transport-type-origin()
+            +e.icons
+              +e.IMG.icon_bus(src="assets/images/nd/nd-bus.svg")
+            +e.name Shoreditch High Street Station
+        +e.TD.cell_content
+          +travel-time('10 min', 'man', '_man')._bold
+      +e.TR.row
+        +e.TD.cell_head
+          +transport-type-origin()
+            +e.icons
+              +e.IMG.icon_plane(src="assets/images/nd/nd-plane.svg")
+            +e.name City
+        +e.TD.cell_content
+          +travel-time('10 min', 'car', '_car')._bold
+      +e.TR.row
+        +e.TD.cell_head
+          +transport-type-origin()
+            +e.icons
+              +e.IMG.icon_plane(src="assets/images/nd/nd-plane.svg")
+            +e.name Standsted
+        +e.TD.cell_content
+          +travel-time('10 min', 'car', '_car')._bold
+      +e.TR.row
+        +e.TD.cell_head
+          +transport-type-origin()
+            +e.icons
+              +e.IMG.icon_plane(src="assets/images/nd/nd-plane.svg")
+            +e.name Heathrow
+        +e.TD.cell_content
+          +travel-time('10 min', 'car', '_car')._bold
+      +e.TR.row
+        +e.TD.cell_head
+          +transport-type-origin()
+            +e.icons
+              +e.IMG.icon_plane(src="assets/images/nd/nd-plane.svg")
+            +e.name Heathrow
+        +e.TD.cell_content
+          +travel-time('10 min', 'car', '_car')._bold
