--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -66,6 +66,26 @@
   @include screen('sm', max, 2) {
     padding: 0 pxtovw(20, 375);
   }
+
+  &_space {
+    padding: 0 195px;
+
+    @include screen('xl', max, 2) {
+      padding: 0 50px;
+    }
+
+    @include screen('lg', max, 2) {
+      padding: 0 pxtovw(50, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding: 0 pxtovw(50, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding: 0 pxtovw(20, 375);
+    }
+  }
 }
 
 .js-sr {
